<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutFormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/form_icon_repro"
                android:layout_width="33dp"
                android:layout_height="32dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="1dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/reprogrammable"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_calendar"
                app:srcCompat="@drawable/change" />

            <ImageView
                android:id="@+id/form_icon_motor"
                android:layout_width="54dp"
                android:layout_height="47dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="4dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/search_motor"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_description"
                app:srcCompat="@drawable/motor" />

            <ImageView
                android:id="@+id/form_icon_calendar"
                android:layout_width="64dp"
                android:layout_height="62dp"
                android:layout_marginTop="49dp"
                app:layout_constraintEnd_toStartOf="@+id/car_launchdateTIL"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_motor"
                app:srcCompat="@drawable/calendario" />

            <ImageView
                android:id="@+id/form_icon_description"
                android:layout_width="50dp"
                android:layout_height="52dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="5dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/car_descriptionTIL"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_hp"
                app:srcCompat="@drawable/descripcion" />

            <ImageView
                android:id="@+id/form_icon_hp"
                android:layout_width="52dp"
                android:layout_height="53dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="7dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/car_hpTIL"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_model"
                app:srcCompat="@drawable/caballo" />

            <ImageView
                android:id="@+id/form_icon_model"
                android:layout_width="56dp"
                android:layout_height="53dp"
                android:layout_marginTop="49dp"
                android:layout_marginEnd="5dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/car_modelTIL"
                app:layout_constraintTop_toBottomOf="@+id/form_icon_brand"
                app:srcCompat="@drawable/modelocoche" />

            <ImageView
                android:id="@+id/form_icon_brand"
                android:layout_width="54dp"
                android:layout_height="51dp"
                android:layout_marginTop="338dp"
                android:layout_marginEnd="5dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/car_brandTIL"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iconmarca" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/ic_launcher_background"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reprogrammable" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/ic_launcher_background"
                android:text="@string/clean"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_brandTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="325dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_brandET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/brand" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_modelTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="425dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_modelET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/model" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_hpTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="525dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_hpET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_descriptionTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="625dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_descriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_description" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/search_motor"
                android:layout_width="230dp"
                android:layout_height="55dp"
                android:layout_marginTop="725dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/car_launchdateTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="825dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_launchdateET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/launchDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/reprogrammable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="925dp"
                android:text="@string/reprogrammable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/form_image"
                android:layout_width="243dp"
                android:layout_height="199dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/ic_lands"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#B81414"
                android:text="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toBottomOf="@+id/reprogrammable" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>