...
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_logo" translatable="false">LogoActivity</string>
    <string name="title_activity_form" translatable="false">FormActivity</string>
    <string name="results">12 results found</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    <string name="launchDate">Launch date</string>
    <string name="todo">All</string>
    <string name="reprogrammable">Reprogrammable</string>
    <string name="car_description">Description</string>
    <string name="hp">HP</string>
    <string name="delete">Delete</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
...
